tests/ui/lifetimes/issue-83753-invalid-associated-type-supertrait-hrtb.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-83753-invalid-associated-type-supertrait-hrtb.rs:5:21
   |
LL |     fn bar(foo: Foo<Target = usize>) {}
   |                     ^^^^^^^^^^^^^^ associated type not allowed here
   |
help: consider removing this type binding
   |
LL |     fn bar(foo: Foo<Target = usize>) {}
   |                    ~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0229`.
